//hnp.proto hack net protoc.

syntax = "proto3";
option java_package = "com.suremoon.hacknet.pb";
option java_outer_classname="hnp";
option go_package = "github.com/ProtossGenius/hacknet/pb/hnp;hnp";
package hnp;
import "google/protobuf/any.proto";

// Register register this client to server.
message Register {
	string pubKey = 1; 
}

// Result register result
message Result {
	int32 enums = 1; // info's enum;
	string info = 2; // Success return "", fail return error reason.
}

// CheckEmail check if email belong to register.
message CheckEmail {
	string code = 1;	
}

// Forward send email to another point.
message Forward {
	string target = 1; // target hacker's email.
	int32  enums = 2; // forward message's enums.
	google.protobuf.Any msg = 3; // message to send.
	// TODO: another things in future.
}

// ForwardMsg send message to the point.
message ForwardMsg {
	string fromEmail = 1;
	string fromIp = 2;
	int32  fromPort = 3;
	int32  enums = 4;
	google.protobuf.Any msg = 5;
}

// HeartJump heart jump just for keep alive.
message HeartJump {
}


