syntax = "proto3";
option java_package = "pb";
option java_outer_classname="smn_dict";
option go_package = "github.com/ProtossGenius/hacknet/pb/smn_dict;smn_dict";
package smn_dict;

enum EDict{
	None = 0;
	cs_HeartJump = 3;
	cs_Register = 4;
	sc_AnsHack = 6;
	cs_CheckEmail = 8;
	hmsg_Message = 9;
	cs_SendMsg = 11;
	cs_Forward = 12;
	//cs_to the point. = 13;
}
